# ClassFactory

./: AUTHORS  CMakeLists.txt  README.md  index.html  params.json
include/ClassFactory/: LCF.h
include/ClassFactory/detail/: ClassAllocatorImpl.inl  ClassFactory.h  ClassFactoryImpl.inl  Registration.h
src/: CMakeLists.txt
src/example/: CMakeLists.txt  main.cpp
src/factory/: CMakeLists.txt  ClassFactory.cpp  libClassFactory.h
src/factory/detail/: ClassAllocator.h  ClassFactory.cpp  ClassFactory.h  ClassFactoryImpl.inl  Registration.h  Singleton.h
